@@ -84,11 +84,17 @@ struct _tuple_dict_extra {
 };
 
 static int _dict_iter_get_users(char const* key, UNUSED_ARG(void* data), void* extra) {
+    PyObject* tmp;
     struct _tuple_dict_extra* real_extra = (struct _tuple_dict_extra*)extra;
 
-    PyTuple_SetItem(real_extra->data, *(int*)real_extra->extra,
-            PyString_FromString(key));
+    if ((tmp = PyString_FromString(key)) == NULL)
+        return 1;
+
+    if (PyTuple_SetItem(real_extra->data, *(int*)real_extra->extra, tmp))
+        return 1;
+
     *real_extra->extra = *real_extra->extra + 1;
+
     return 0;
 }
 
@@ -114,7 +120,8 @@ static int _dict_iter_get_servers(char const* key, UNUSED_ARG(void* data), void*
 static PyObject*
 emb_get_users(UNUSED_ARG(PyObject *self), PyObject *args) {
     PyObject* retval;
-    size_t num_clients, n = 0;
+    PyObject* tmp;
+    size_t num_clients, n = 0, i;
     struct _tuple_dict_extra extra;
 
     if (!PyArg_ParseTuple(args, ""))
@@ -122,11 +129,21 @@ emb_get_users(UNUSED_ARG(PyObject *self), PyObject *args) {
 
     num_clients = dict_size(clients);
     retval = PyTuple_New(num_clients);
+    if (retval == NULL)
+        return NULL;
 
     extra.extra = &n;
     extra.data = retval;
 
-    dict_foreach(clients, _dict_iter_get_users, (void*)&extra);
+    if (dict_foreach(clients, _dict_iter_get_users, (void*)&extra) != NULL) {
+        for (i = 0; i < n; ++i) {
+            tmp = PyTuple_GetItem(retval, i);
+            PyTuple_SET_ITEM(retval, i, NULL);
+            Py_DECREF(tmp);
+        }
+        Py_DECREF(retval);
+        return NULL;
+    }
 
     return retval;
 }
